manifests/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: teacher-services-tech-docs
spec:
  selector:
    app: teacher-services-tech-docs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
